@dev 升级Java17、配置文件化、优化代码